<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|right"
        android:background="@drawable/appwidget_bg"
        android:paddingRight="12dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="78dp"
            android:layout_height="fill_parent"
            android:gravity="center|left"
            android:text="@string/desc"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/first"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_widget"
            android:text="@string/five"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/second"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_widget"
            android:text="@string/ten"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/third"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_widget"
            android:text="@string/fifteen"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/fourth"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_widget"
            android:text="@string/twenty"
            android:textColor="@android:color/black" />
    </LinearLayout>

</FrameLayout>